--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -4,7 +4,7 @@
 
 {% block main %}
     <h1>Pay by credit card</h1>
-    <form class="form" action="." id="payment" method="post">
+    <form class="for" action="." id="payment" method="post">
 
         <label for="card-number">Card Number</label>
         <div id="card-number" class="field"></div>
