--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -3,8 +3,8 @@
 {% block title %}Pay by credit card{% endblock %}
 
 {% block main %}
-    <h1>Pay by credit card</h1>
-    <form class="for" action="." id="payment" method="post">
+    <form class="form" action="." id="payment" method="post">
+    <h1 class="title">Pay by credit card</h1>
 
         <label for="card-number">Card Number</label>
         <div id="card-number" class="field"></div>
@@ -17,7 +17,7 @@
 
         <input type="hidden" id="nonce" name="payment_method_nonce" value="">
         {% csrf_token %}
-        <input type="submit" value="Pay">
+        <input type="submit" value="Pay" class="btn pay">
     </form>
     <!-- Load the required client component. -->
     <script src="https://js.braintreegateway.com/web/3.29.0/js/client.min.js"></script>
