Add page category

--- a/customer/templates/customer/login.html
+++ b/customer/templates/customer/login.html
@@ -13,7 +13,7 @@
         <p class="form__description">
             Please login using account detail bellow.
         </p>
-        {{ form.username.error }}
+        {{ form.username.errors }}
         {{ form.username }}
         <br>
         {{ form.password.errors }}
